--- a/404.html
+++ b/404.html
@@ -3,5 +3,5 @@
   <head>
     <meta http-equiv="refresh" content="0; URL=/" />
   </head>
-  <body></body>
+  <body>please contact dev</body>
 </html>
